--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "cyrillefr/scrape-php",
   "description": "A simple drill",
   "require": {
-    "php": ">=5.3,<5.6,",
+    "php": ">=5.3,<5.6",
     "phpunit/phpunit": "4.8"
   },
   "autoload": {
@@ -10,5 +10,5 @@
             "": "src",
             "Cyrillefr\\Scraper\\Tests\\": "tests/"
         }
-    },
+    }
 }
